--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,22 @@
     </head>
     <body>
         <h1>Lasagna Recipes</h1>
+        <img src="https://assets.epicurious.com/photos/59e8ea73721e11367c485146/1:1/w_1280%2Cc_limit/Squash-Casserole-17102017.jpg" alt="Lasagna Dish with Lettus" width="400px">
+        <p>Thinly sliced squash and kale (plus plenty of ricotta cheese) combine in this lasagna-like casserole that's perfect for a hearty winter dinner. Quick-pickled raisins and nutty hazelnuts add brightness and crunch.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1/2 cup apple cider vinegar</li>
+            <li>1 cup golden raisins</li>
+            <li>1 large delicata squash (about 2 1/2 pounds), cut into 1/4" half-moons</li>
+            <li>5 sprigs thyme</li>
+            <li>3 garlic cloves</li>
+            <li>4 tablespoons extra-virgin olive oil, divided, plus more for pan</li>
+        </ul>
+        <h2>Steps</h2>
+        <ul>
+            <li><p>Preheat oven to 450°F. Bring vinegar and 1/3 cup water to a simmer in a small pot. Remove from heat. Add raisins, cover, and let sit until ready to use.</p></li>
+            <li><p>Divide squash, thyme, and garlic between 2 rimmed baking sheets; arrange in a single layer. Toss with 2 Tbsp. oil, 1/2 tsp. salt, and 1/2 tsp. pepper. Roast 12 minutes. Toss, then add hazelnuts to 1 section of 1 sheet. Continue to roast until hazelnuts are toasted and browned and squash is tender and cooked through, about 6 minutes more.</p></li>
+            <li><p>Whisk ricotta and cream in a medium bowl until smooth. Add 6 oz. mozzarella, 3/4 tsp. salt, and remaining 1/2 tsp. pepper and whisk to combine. Remove thyme leaves from stems and add to cheese mixture. Coarsely chop garlic, add to cheese mixture, and stir to combine.</p></li>
+        </ul>
     </body>
 </html>
