--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Amazing Lasagna Recipe</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Amazing Lasagna Recipe</a></li>
+            <li><a href="./recipes/pizza.html">Amazing Pizza Recipe</a></li>
+        </ul>
+        
     </body>
 </html>
