Modified the alternative text for pizza image

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Lasagna Recipes</h1>
-        <img src="https://assets.epicurious.com/photos/6176f5ddaad3df0658faf548/16:9/w_2560%2Cc_limit/MargaritaPizza_HERO_102121_22931.jpg" alt="Lasagna Dish with Lettus" width="400px">
+        <img src="https://assets.epicurious.com/photos/6176f5ddaad3df0658faf548/16:9/w_2560%2Cc_limit/MargaritaPizza_HERO_102121_22931.jpg" alt="Pizza on Tray" width="400px">
         <p>If you’ve ever second-guessed your baking skills because your homemade bread doesn’t look or feel exactly like the picture-perfect loaves you might find in the bread aisle of the supermarket, fret not: There are many additives in store-bought breads that don’t usually appear in the average home kitchen. (Unless, that is, you regularly stock up on preservatives like propionates and EDTA.) And the main thing that keeps those plastic-wrapped loaves as soft as a pile of Siberian kittens is a family of ingredients that’s broadly known as dough conditioners.</p>
         <h2>Ingredients</h2>
         <ul>
