Added link to peanut butter page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="./recipes/lasagna.html">Amazing Lasagna Recipe</a></li>
             <li><a href="./recipes/pizza.html">Amazing Pizza Recipe</a></li>
+            <li><a href="./recipes/peanut_butter.html">Amazing Penut Butter Recipe</a></li>
         </ul>
         
     </body>
